Fall back to power average if input is not available

Some power sensors don't expose a current value most notably amdgpu.
For those fall back to the average reading if available.
BUG:445920